# houhou-builds

./: .envrc  .gitignore  .prettierrc.json5  CREDITS.md  README.md  eslint.config.js  flake.nix  jest.config.js  package-lock.json  package.json  tailwind.config.js
.github/workflows/: tauri.yml
.reuse/: dep5
src/: App.module.scss  App.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/data/: kradfile
src-tauri/database-maker/: Cargo.toml
src-tauri/database-maker/src/: kradfile.rs  main.rs
src-tauri/migrations/: 20230608093603_initial.sql
src-tauri/src/: kanji.rs  main.rs  srs.rs  utils.rs  vocab.rs
src-tauri/src/kanji/: mod.rs  query.rs
src/components/: DashboardItemStats.module.scss  DashboardItemStats.tsx  DashboardReviewStats.module.scss  DashboardReviewStats.tsx  KanjiDisplay.module.scss  KanjiDisplay.tsx  KanjiList.module.scss  KanjiList.tsx  KanjiSearch.tsx  SearchBar.tsx  SrsPart.tsx  Strokes.tsx  VocabList.module.scss  VocabList.tsx
src/components/srsReview/: InputBox.tsx  SrsReview.module.scss
src/components/utils/: ConditionalWrapper.tsx  GradeBadge.tsx  InputBox.tsx  LevelBadge.module.scss  LevelBadge.tsx
src/data/: kanadata.json  srslevels.json
src/lib/: ConfirmQuitModal.tsx  SelectOnClick.tsx  kanaHelper.ts  kanji.ts  srs.ts  vocab.ts
src/panes/: HomePane.tsx  KanjiPane.module.scss  KanjiPane.tsx  SettingsPane.module.scss  SettingsPane.tsx  SrsPane.module.scss  SrsPane.tsx  SrsReviewPane.module.scss  SrsReviewPane.test.tsx  SrsReviewPane.tsx  VocabPane.module.scss  VocabPane.tsx
src/test/: setup.ts
src/types/: Kanji.ts  Srs.ts
