[package]
name = "houhou"
version = "0.1.0"
description = "Houhou SRS"
authors = ["Michael Zhang <mail@mzhang.io>"]
license = ""
repository = ""
edition = "2021"

[workspace]
members = ["database-maker"]

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = [ "app-all", "notification-all", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
anyhow = "1.0.71"
clap = { version = "4.3.2", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.28.2", features = ["full"] }
derivative = "2.2.0"
flate2 = "1.0.26"
base64 = "0.21.2"
tantivy = { version = "0.20.2", default-features = false, features = ["memmap2"] }
itertools = "0.10.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
